Fix z-index of Toc list

--- a/app/assets/stylesheets/toc.scss
+++ b/app/assets/stylesheets/toc.scss
@@ -1,7 +1,7 @@
 @import "vars";
 .toc-container {
   display: none;
-  z-index: 999;
+  z-index: 99999;
 
   .dropdown-menu {
     background: #FFF;
